# Multi_agent_Perception_Sim

./: README.md
fws_description/: CMakeLists.txt
fws_description/config/: fws_robot_sim.yaml
fws_description/gazebo/: fws_robot.gazebo.xacro
fws_description/robots/: fws_robot.urdf.xacro
fws_description/robots/parts/base/: base.urdf.xacro
fws_description/robots/parts/lidar_base/: lidar_base.urdf.xacro
fws_description/robots/parts/lidar_head/: lidar_head.urdf.xacro
fws_description/robots/parts/suspension/: suspension.urdf.xacro
fws_description/robots/parts/wheel/: wheel.urdf.xacro
fws_robot_sim/launch/: fws_robot_spawn.launch.py
fws_robot_sim/worlds/: fws_robot_world.sdf  fws_robot_world2.sdf  fws_robot_world3.sdf  fws_robot_world4.sdf  fws_robot_world5.sdf  fws_robot_world6.sdf  fws_robot_world7.sdf  fws_robot_world8.sdf  fws_robot_world9.sdf
fws_robot_sim/worlds/cone_blue/: model.sdf
fws_robot_sim/worlds/cone_red/: model.sdf
fws_robot_sim/worlds/cone_yellow/: model.sdf
fws_robot_sim/worlds/house_1/: model.config  model.sdf
fws_robot_sim/worlds/house_1/media/: house.dae  road.stl
fws_robot_sim/worlds/pine_tree/: model.sdf
fws_robot_sim/worlds/road_1/: model.config  model.sdf
fws_robot_sim/worlds/road_1/media/: road_1.dae
fws_robot_sim/worlds/rock_1/: model.config  model.sdf
fws_robot_sim/worlds/rock_1/media/: Rock1.dae
fws_robot_sim/worlds/terrain_1/: model.config  model.sdf
fws_robot_sim/worlds/terrain_1/media/: terrain_1.dae
fws_robot_sim/worlds/x3/: model.sdf
gps_to_gazebo/: package.xml  setup.cfg  setup.py
gps_to_gazebo/gps_to_gazebo/: gps_to_gazebo_node.py
install/: local_setup.sh  setup.sh
install/fws_description/share/fws_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fws_robot_description/share/fws_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/fws_robot_sim/share/fws_robot_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/gps_to_gazebo/lib/gps_to_gazebo/: gps_to_gazebo_node
install/gps_to_gazebo/share/gps_to_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros_gz_example_application/lib/ros_gz_example_application/: Robot_pid_control_node  UAV_pid_control_node  odometry_publisher_node  talker
install/ros_gz_example_application/share/ros_gz_example_application/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ros_gz_example_bringup/share/ros_gz_example_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ros_gz_example_description/share/ros_gz_example_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ros_gz_example_gazebo/share/ros_gz_example_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  (+1 more)
log/: latest_build
ros_gz_example_application/: CMakeLists.txt  package.xml
ros_gz_example_application/include/ros_gz_example_application/: odometry.hpp
ros_gz_example_application/src/: Robot_navigation.cpp  UAV_navigation.cpp  cascade.xml  cascade_classifier.cpp  odometry.cpp  odometry_publish.cpp  publisher_lambda_function.cpp  robot.txt  robot22.txt  subscriber_lambda_function.cpp  uav.txt  uav22.txt
ros_gz_example_bringup/config/: ros_gz_example_bridge.yaml
ros_gz_example_description/models/road_1/: model.config  model.sdf
ros_gz_example_description/models/terrain_1/: model.sdf
ros_gz_example_description/models/x3/: model.sdf
ros_gz_example_gazebo/worlds/: diff_drive.sdf  diff_drive2.sdf
ros_rl/: package.xml  setup.py
ros_rl/ros_rl/: RL_vec_test.py  UAV_RL_pipeline.py  __init__.py  test.py
velocity_pub/scripts/: robot_control.py
(+236 files in other folders)
