<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_rl</name>
  <version>0.0.0</version>
  <description>Standalone UAV reinforcement learning environment using Gymnasium and ROS 2</description>

  <maintainer email="bulin11636@gmail.com">cirl</maintainer>
  <license>MIT</license>

  <!-- runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>gymnasium</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>gymnasium</exec_depend>

  <!-- test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
